--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -31,6 +31,8 @@ jobs:
           name: frontend-assets
           path: dist
   deploy:
+    if: github.ref == 'refs/heads/main' && github.repository_owner == 'fitch-connect-microfrontends-workshop'
+    needs: [build]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/download-artifact@v2
