--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -38,7 +38,7 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: frontend-assets
-          path: dist
+          path: .
       - id: auth
         uses: google-github-actions/auth@v0.4.1
         with:
