--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -46,5 +46,5 @@ jobs:
       - id: upload-files
         uses: google-github-actions/upload-cloud-storage@v0.4.0
         with:
-          path: /
+          path: .
           destination: mtb.microfrontends.app
