--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -49,4 +49,4 @@ jobs:
           path: .
           destination: mtb.microfrontends.app
           headers: |-
-            Cache-Control: public, max-age=30
+            cache-control: public, max-age=30
