--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "format": "prettier --write .",
     "check-format": "prettier --check .",
     "prepare": "husky install",
-    "build": "concurrently npm:build:*",
+    "build": "rimraf dist && concurrently npm:build:*",
     "build:webpack": "webpack --mode=production",
     "build:types": "tsc"
   },
@@ -40,8 +40,11 @@
     "husky": "^7.0.4",
     "jest": "^27.4.3",
     "jest-cli": "^27.4.3",
+    "mini-css-extract-plugin": "^2.4.5",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.2",
+    "rimraf": "^3.0.2",
+    "tailwindcss": "^2.2.19",
     "ts-config-single-spa": "^3.0.0",
     "typescript": "^4.5.2",
     "webpack": "^5.65.0",
