--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -44,7 +44,7 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_CREDENTIALS }}
       - id: upload-files
-        uses: google-github-actions/upload-cloud-storage@v0.5.0
+        uses: google-github-actions/upload-cloud-storage@main
         with:
           path: .
           destination: mtb.microfrontends.app
